--- a/play/templates/play/index.html
+++ b/play/templates/play/index.html
@@ -87,11 +87,14 @@
               </div>
             </div>
         </div>
+
+
         <!-- ======= Hero Section ======= -->
         <section id="hero" class="d-flex align-items-center">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6 d-flex flex-column justify-content-center pt-4 pt-lg-0 order-2 order-lg-1" data-aos="fade-up" data-aos-delay="200">
+                        <!-- Message -->
                         <div class="message_text">
                             {% if messages %}
                             <ul id="mssg">
@@ -101,6 +104,8 @@
                             </ul>
                             {% endif %}    
                         </div>
+                        <!-- Message End-->
+                        
                         <h1>Dont Know The Video YouTube Deleted?</h1>
                         <h2>YouTube delete videos without telling the users who have saved those videos in their playlists. You can't even know the title of video that was deleted and hence can't find a replacement. <br>MeTube helps you to track the title of deleted videos.</h2>
                         <div class="d-flex justify-content-center justify-content-lg-start">
